deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-deployment
  labels:
    app: demo-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-shop
  template:
    metadata:
      labels:
        app: demo-shop
    spec:
      containers:
        - name: catalogue-service-container
          image: catalogue-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  selector:
    app: demo-shop
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
